--- a/.github/workflows/a.yaml
+++ b/.github/workflows/a.yaml
@@ -7,7 +7,56 @@ on:
     branches: [ "main", "dev" ]
 
 jobs:
+  LINT:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Setup Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.20'
+
+    - name: Install golangci-lint
+      run: |
+        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.55.2
+
+    - name: Run golangci-lint
+      run: golangci-lint run ./...
+
+  TEST:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Setup Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.20'
+
+    - name: Run tests with coverage
+      run: |
+        go test -v -coverprofile coverage.out ./...
+        go tool cover -func coverage.out
+
+    - name: Generate coverage report
+      run: |
+        go install github.com/koverto/kover@latest
+        kover report -i coverage.out -o coverage.html
+
+    - name: Upload coverage report
+      uses: actions/upload-artifact@v3
+      with:
+        name: coverage-report
+        path: coverage.html
+
   BUILD:
+    name: Build
+    needs: [lint, test]
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -20,18 +69,14 @@ jobs:
 
     - name: Build
       run: go build -v ./...
-      
-  TEST:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
 
-    - name: Setup Go
-      uses: actions/setup-go@v4
+    - name: Build Docker image
+      run: |
+        docker build -t calculator:latest -f build/Dockerfile .
+
+    - name: Save Docker image
+      uses: actions/upload-artifact@v3
       with:
-        go-version: '1.20'
-
-    - name: Test
-      run: go test -v ./...
+        name: docker-image
+        path: calculator:latest
       
