fix: solve ci issues

--- a/.github/workflows/a.yaml
+++ b/.github/workflows/a.yaml
@@ -40,23 +40,17 @@ jobs:
 
     - name: Run tests with coverage
       run: |
-        go test -v -coverprofile coverage.out ./...
-        go tool cover -func coverage.out
+        go test -v -coverprofile=coverage.out ./...
+        go tool cover -func=coverage.out
 
     - name: Generate coverage report
       run: |
-        go install github.com/koverto/kover@latest
-        kover report -i coverage.out -o coverage.html
-
-    - name: Upload coverage report
-      uses: actions/upload-artifact@v3
-      with:
-        name: coverage-report
-        path: coverage.html
+        go tool cover -html=coverage.out -o coverage.html
+        echo "Coverage report generated at coverage.html"
 
   BUILD:
     name: Build
-    needs: [lint, test]
+    needs: [LINT, TEST]
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -75,7 +69,7 @@ jobs:
         docker build -t calculator:latest -f build/Dockerfile .
 
     - name: Save Docker image
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: docker-image
         path: calculator:latest
