--- a/.github/workflows/a.yaml
+++ b/.github/workflows/a.yaml
@@ -24,7 +24,13 @@ jobs:
         curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.55.2
 
     - name: Run golangci-lint
-      run: golangci-lint run ./...
+      run: golangci-lint run ./... --out-format=html > lint-report.html
+
+    - name: Upload lint report
+      uses: actions/upload-artifact@v4
+      with:
+        name: lint-report
+        path: lint-report.html
 
   TEST:
     name: Test
@@ -48,6 +54,12 @@ jobs:
         go tool cover -html=coverage.out -o coverage.html
         echo "Coverage report generated at coverage.html"
 
+    - name: Upload coverage report
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-report
+        path: coverage.html
+
   BUILD:
     name: Build
     needs: [LINT, TEST]
@@ -69,8 +81,12 @@ jobs:
         docker build -t calculator:latest -f build/Dockerfile .
 
     - name: Save Docker image
+      run: |
+        docker save calculator:latest > calculator.tar
+
+    - name: Upload Docker image
       uses: actions/upload-artifact@v4
       with:
         name: docker-image
-        path: calculator:latest
+        path: calculator.tar
       
